:sparkles: adding new fancy title

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1669,6 +1669,10 @@ select {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
+.text-9xl {
+	font-size: 8rem;
+	line-height: 1;
+}
 .font-medium {
 	font-weight: 500;
 }
